yaml-files_&_helm-charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    deployment: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: master
        image: redis
        resources:
          limits:
            memory: "1.5Gi"
            cpu: "0.3"
        ports:
        - containerPort: 6379
        volumeMounts:
          - mountPath: /courseservice
            name: course-volume
      volumes:
      - name: course-volume
        emptyDir: {}
