yaml-files_&_helm-charts/newingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kredo-ingress-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-body-size: 250m
    nginx.ingress.kubernetes.io/upstream-hash-by-subset: "true"
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: /healthz
spec:
  tls: 
    - 
      hosts: 
        - kredo-staging.kredoapp.com
        - framework-staging.kredoapp.com
        - course-staging.kredoapp.com
        - staging-login.kredoapp.com
        - user-staging.kredoapp.com
      secretName: tls-secret      
  rules:
  - host: kredo-staging.kredoapp.com
    http:
      paths:       
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: kredoappfe
            port:
              number: 4000
  - host: framework-staging.kredoapp.com
    http:
      paths:                     
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frameworkfe
            port:
              number: 3000
  - host: course-staging.kredoapp.com
    http:
      paths:                    
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: course-service
            port:
              number: 8000
  - host: staging-login.kredoapp.com
    http:
      paths:                       
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080 
  - host: user-staging.kredoapp.com
    http:
      paths:                       
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 9000
